# asterisk

./: Cargo.toml  README.md
src/: error.rs  function.rs  hooks.rs  main.rs  prompt.rs
src/commands/: add.rs  edit.rs  exec.rs  init.rs  mod.rs
src/shells/: bash.rs  cmd.rs  default.rs  fish.rs  mod.rs  pwsh.rs  zsh.rs
